Se agrego el icono de la página

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     background-color: #12eeac!important;
     }
   </style>
+
+<link rel="icon" href="icono.ico" type="image/x-icon">
 </head>
 
 <body>
