Se agregaron animaciones

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     .bg-light {
     background-color: #12eeac!important;
     }
-  </style>
+    .tracking-in-contract{animation:tracking-in-contract 0.7s linear both} @keyframes tracking-in-contract{0%{letter-spacing:.6em;opacity:0}40%{opacity:.6}100%{letter-spacing:normal;opacity:1}}
+    .blur-in{animation:blur-in 0.5s linear both} @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
+ </style>
 
 <link rel="icon" href="icono.ico" type="image/x-icon">
 </head>
@@ -72,8 +74,8 @@
   
   <section class="container">
     <br><br>
-    <h2 id="sobreMi" class="text-center">Sobre mí</h2>
-    <p>
+    <h2 id="sobreMi" class="text-center tracking-in-contract">Sobre mí</h2>
+    <p class="blur-in">
       Soy un joven ambateño de 19 años, apasionado por el aprendizaje y el
       desarrollo personal. Mi actitud positiva y proactiva me impulsa a dar lo
       mejor de mí en cualquier entorno. Siempre estoy dispuesto a enfrentar
@@ -86,8 +88,8 @@
   </section>
 
   <section class="container">
-    <h2 id="educacion" class="text-center">Formación Académica</h2>
-    <ul class="list-group">
+    <h2 id="educacion" class="text-center tracking-in-contract">Formación Académica</h2>
+    <ul class="list-group blur-in">
       <li class="list-group-item">
         <i class="fas fa-graduation-cap"></i> Universidad Técnica de Ambato
         <p>Ingeniero en software - En proceso</p>
@@ -100,14 +102,14 @@
   </section>
 
   <section class="container">
-    <h2 id="experiencia" class="text-center">Experiencia Laboral</h2>
+    <h2 id="experiencia" class="text-center tracking-in-contract">Experiencia Laboral</h2>
     <img src="triste.gif" alt="triste" width="100px" height="100px" class="d-block mx-auto" />
-    <p class="text-center">Actualmente no tengo experiencia laboral</p>
+    <p class="text-center blur-in">Actualmente no tengo experiencia laboral</p>
   </section>
 
   <section class="container">
-    <h2 id="conocimientos" class="text-center">Conocimientos</h2>
-    <ul class="list-group">
+    <h2 id="conocimientos" class="text-center tracking-in-contract">Conocimientos</h2>
+    <ul class="list-group blur-in">
       <li class="list-group-item">
         <i class="fas fa-code"></i> HTML
       </li>
@@ -127,8 +129,8 @@
   </section>
 
   <section class="container">
-    <h2 id="habilidades" class="text-center">Habilidades</h2>
-    <ul class="list-group">
+    <h2 id="habilidades" class="text-center tracking-in-contract">Habilidades</h2>
+    <ul class="list-group blur-in">
       <li class="list-group-item">
         <i class="fas fa-users"></i> Trabajo en equipo
       </li>
