--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 
 <body>
-  <nav id= "nave"class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav id= "nave"class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <img src="perfil.gif" id="logo" class="img-fluid" />
       <a class="navbar-brand" href="#">David Ayme</a>
