se reordenan los archivos

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
     }
   </style>
 
-  <link rel="icon" href="icono.ico" type="image/x-icon">
+  <link rel="icon" href="./src/icono.ico" type="image/x-icon">
 </head>
 
 <body>
   <nav id="nave" class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <img src="perfil.gif" id="logo" class="img-fluid" />
+      <img src="./src/perfil.gif" id="logo" class="img-fluid" />
       <a class="navbar-brand" href="#">David Ayme</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
